<resources>
	<string name="empty" translatable="false"></string>
	<string name="app_name" translatable="false">Nina FOSS</string>
	<string name="error_generic">An error occurred</string>
	<string name="error_no_network_connection">No network connection</string>
	<string name="error_activity_not_found">Please download an app that can open this file.</string>
	<string name="error_server_not_found">Server not found.</string>
	<string name="error_name_contains_invalid_characters">Can\'t contain special characters.</string>
	<string name="error_general_update">Update check failed. General error occurred.</string>
	<string name="error_hash_mismatch_update">Update check failed. Calculated hash doesn\'t match the uploaded file</string>
	<string name="error_update_no_internet">Update check failed. No internet connection.</string>
	<string name="error_play_services_not_available">Google Play Services not installed</string>
	<string name="snack_bar_action_title_settings">Settings</string>
	<string name="snack_bar_action_title_search">Search</string>
	<string name="snack_bar_action_title_search_previous">Previous</string>
	<string name="snack_bar_action_title_search_next">Next</string>
	<string name="snack_bar_action_title_sort">Sort</string>
	<string name="snack_bar_action_title_sort_az">A - Z</string>
	<string name="snack_bar_action_title_sort_za">Z - A</string>
	<string name="snack_bar_action_title_sort_newest">Newest first</string>
	<string name="snack_bar_action_title_sort_oldest">Oldest first</string>
	<string name="snack_bar_action_title_sort_biggest">Biggest first</string>
	<string name="snack_bar_action_title_sort_smallest">Smallest first</string>
	<string name="screen_vault_list_actions_title">Add to Cryptomator</string>
	<string name="screen_vault_list_action_create_new_vault">Create new message</string>
	<string name="screen_vault_list_action_add_existing_vault">Add existing message</string>
	<string name="screen_vault_list_vault_action_delete">Remove</string>
	<string name="screen_vault_list_vault_creation_hint">Click here to create a new message</string>
	<string name="screen_vault_list_change_password_successful">Password successfully changed</string>
	<string name="screen_file_browser_node_action_export">Export</string>
	<string name="screen_file_browser_node_action_delete">Delete</string>
	<string name="screen_file_browser_selection_mode_title_zero_elements">Select items</string>
	<string name="screen_file_browser_selection_mode_title_one_or_more_elements">%1$d selected</string>
	<string name="screen_file_browser_select_items">Select</string>
	<string name="screen_file_browser_select_all_items">Select all</string>
	<string name="screen_file_browser_refresh_items">Refresh</string>
	<string name="screen_file_browser_no_connection_message">No connection</string>
	<string name="screen_file_browser_no_connection_button_text">Retry</string>
	<string name="screen_webdav_settings_title" translatable="false">Foo bar</string>
	<string name="screen_webdav_settings_url_port_label">URL</string>
	<string name="screen_webdav_settings_password_label">Password</string>
	<string name="screen_webdav_settings_done_button_text">Connect</string>
	<string name="screen_webdav_settings_msg_url_must_not_be_empty">URL can\'t be empty.</string>
	<string name="screen_webdav_settings_msg_url_is_invalid">URL is invalid.</string>
	<string name="screen_webdav_settings_msg_username_must_not_be_empty">Username can\'t be empty.</string>
	<string name="screen_webdav_settings_msg_password_must_not_be_empty">Password can\'t be empty.</string>
	<string name="screen_create_location_title">Location</string>
	<string name="screen_create_location_name_label">Location name</string>
	<string name="screen_enter_location_name_msg_name_empty">Location name can\'t be empty.</string>
	<string name="screen_enter_location_name_not_matching_code">No code that matches this location</string>
	<string name="screen_locations_title">Locations</string>
	<string name="screen_enter_vault_name_title" translatable="false">@string/screen_vault_list_action_create_new_vault</string>
	<string name="screen_enter_vault_name_msg_name_empty">Vault name can\'t be empty.</string>
	<string name="screen_enter_vault_name_vault_label">Vault name</string>
	<string name="screen_enter_vault_name_button_text">Create</string>
	<string name="screen_set_password_title">Set password</string>
	<string name="screen_set_password_msg_password_empty" translatable="false">@string/screen_webdav_settings_msg_password_must_not_be_empty</string>
	<string name="screen_set_password_msg_password_mismatch">Password doesn\'t match retyped password.</string>
	<string name="screen_set_password_button_text">Done</string>
	<string name="screen_set_password_hint">IMPORTANT: If you forget your password, there is no way to recover your data.</string>
	<string name="screen_set_password_password_label" translatable="false">@string/screen_webdav_settings_password_label</string>
	<string name="screen_set_password_retype_password_label">Retype password</string>
	<string name="screen_set_password_strength_indicator_0">Too weak to create a message</string>
	<string name="screen_set_password_strength_indicator_1">Weak</string>
	<string name="screen_set_password_strength_indicator_2">Fair</string>
	<string name="screen_set_password_strength_indicator_3">Strong</string>
	<string name="screen_set_password_strength_indicator_4">Very Strong</string>
	<string name="screen_settings_title" translatable="false">@string/snack_bar_action_title_settings</string>
	<string name="screen_settings_section_general">General</string>
	<string name="screen_settings_cloud_settings_label">Cloud services</string>
	<string name="screen_settings_biometric_auth">Biometric authentication</string>
	<string name="screen_settings_activate_biometric_auth">Activate biometric authentication</string>
	<string name="screen_settings_confirm_face_unlock">Confirm face unlock (if available)</string>
	<string name="screen_settings_block_app_when_obscured">Block app when obscured</string>
	<string name="screen_settings_block_app_when_obscured_summary">Block intercepting the input and displaying a false user interface</string>
	<string name="screen_settings_secure_screen">Block screenshots</string>
	<string name="screen_settings_secure_screen_summary">Block screenshots in the recents list and inside the app</string>
	<string name="screen_settings_section_search">Search</string>
	<string name="screen_settings_live_search">Live search</string>
	<string name="screen_settings_live_search_summary">Update search results while entering the query</string>
	<string name="screen_settings_glob_search">Search using glob pattern</string>
	<string name="screen_settings_glob_search_summary">Use glob pattern matching like alice.*.jpg</string>
	<string name="screen_settings_auto_lock_timeout">Refresh after</string>
	<string name="screen_settings_section_auto_photo_upload">Automatic photo upload</string>
	<string name="screen_settings_section_auto_photo_upload_vault">Choose message for upload</string>
	<string name="screen_settings_section_auto_photo_upload_toggle">Activate</string>
	<string name="screen_settings_section_auto_photo_upload_toggle_summary">Capture images in the background and once the selected message is unlocked, start upload</string>
	<string name="screen_settings_section_auto_photo_upload_toggle_instant_upload">Upload instant</string>
	<string name="screen_settings_section_auto_photo_upload_toggle_instant_upload_summary">Upload directly if the message is unlocked</string>
	<string name="screen_settings_section_auto_photo_upload_only_wifi_toggle">Upload only using WIFI</string>
	<string name="screen_settings_section_auto_photo_upload_including_videos">Upload videos</string>
	<string name="screen_settings_auto_photo_upload_title">Save auto upload files to&#8230;</string>
	<string name="screen_settings_section_social" translatable="false">@string/screen_webdav_settings_done_button_text</string>
	<string name="screen_settings_website_label">NINA FOSS website</string>
	<string name="screen_settings_twitter_label">Follow us on Twitter</string>
	<string name="screen_settings_mastodon_label">Follow us on Mastodon</string>
	<string name="screen_settings_website_uri" translatable="false">https://nina-foss.de</string>
	<string name="screen_settings_twitter_uri" translatable="false">https://twitter.com/NINA-FOSS</string>
	<string name="screen_settings_mastodon_uri" translatable="false">https://mastodon.online/@NINA-FOSS</string>
	<string name="screen_settings_section_legal">Legal</string>
	<string name="screen_settings_licenses_label">Licenses</string>
	<string name="screen_settings_license_terms_label">License terms</string>
	<string name="screen_settings_section_support">Support</string>
	<string name="screen_settings_contact_label">Request help</string>
	<string name="screen_settings_support_uri" translatable="false">https://nina-foss.de/contact/</string>
	<string name="screen_settings_debug_mode_label">Debug mode</string>
	<string name="screen_settings_error_report_label">Send log file</string>
	<string name="screen_settings_error_report_failed">Sending failed</string>
	<string name="screen_settings_section_version">Version</string>
	<string name="screen_settings_advanced_settings">Advanced Settings</string>
	<string name="screen_settings_background_unlock_preparation_label">Accelerate unlock</string>
	<string name="screen_settings_background_unlock_preparation_label_summary">Download message config in the background while prompted to enter the password or biometric auth</string>
	<string name="screen_settings_keep_unlocked_while_editing_files">Keep unlocked</string>
	<string name="screen_settings_keep_unlocked_while_editing_files_summary">Keep messages unlocked while editing files</string>
	<string name="screen_cloud_settings_title" translatable="false">@string/screen_settings_cloud_settings_label</string>
	<string name="screen_cloud_settings_webdav_connections">WebDAV connections</string>
	<string name="screen_cloud_settings_pcloud_connections">pCloud connections</string>
	<string name="screen_cloud_settings_s3_connections">S3 connections</string>
	<string name="screen_cloud_settings_local_storage_locations">Local storage locations</string>
	<string name="screen_cloud_settings_log_in_to">Log in to</string>
	<string name="screen_cloud_settings_sign_out_from_cloud">Sign out from</string>
	<string name="screen_licenses_title" translatable="false">@string/screen_settings_licenses_label</string>
	<string name="screen_authenticate_auth_authentication_failed">%1$s could not be authenticated.</string>
	<string name="screen_update_pcloud_connections_title">Update pCloud credentials</string>
	<string name="dialog_button_cancel">Cancel</string>
	<string name="dialog_enter_password_password_label" translatable="false">@string/screen_webdav_settings_password_label</string>
	<string name="dialog_enter_password_positive_button">Unlock</string>
	<string name="dialog_change_password_old_password_label">Old Password</string>
	<string name="dialog_change_password_new_password_label">New Password</string>
	<string name="dialog_change_password_new_retype_password_label" translatable="false">@string/screen_set_password_retype_password_label</string>
	<string name="dialog_change_password">Change password</string>
	<string name="dialog_change_password_msg_old_password_empty">Old password can\'t be empty.</string>
	<string name="dialog_change_password_msg_new_password_empty">New password can\'t be empty.</string>
	<string name="dialog_change_password_msg_password_mismatch">New password doesn\'t match retyped password.</string>
	<string name="dialog_vault_not_found_title">Vault %1$s not found</string>
	<string name="dialog_settings_update_check_interval_title">Update check interval</string>
	<string name="screen_settings_check_updates">Check for updates</string>
	<string name="screen_settings_style_mode">Style</string>
</resources>