<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/activityRootView">

	<PreferenceCategory
		android:key="@string/screen_settings_section_general"
		android:title="@string/screen_settings_section_general">

		<ListPreference
			android:defaultValue="ONE_HOUR"
			android:dialogTitle="@string/screen_settings_auto_lock_timeout"
			android:entries="@array/screen_settings_polling_entries"
			android:entryValues="@array/screen_settings_polling_values"
			android:key="pollingInterval"
			android:summary="%s"
			android:title="@string/screen_settings_auto_lock_timeout" />

		<ListPreference
			android:defaultValue="MODE_NIGHT_FOLLOW_SYSTEM"
			android:dialogTitle="@string/screen_settings_style_mode"
			android:entries="@array/screen_settings_style_mode_entries"
			android:entryValues="@array/screen_settings_style_mode_values"
			android:key="screenStyleMode"
			android:summary="%s"
			android:title="@string/screen_settings_style_mode" />

	</PreferenceCategory>

	<PreferenceCategory android:title="@string/screen_settings_section_support">

		<androidx.preference.PreferenceScreen android:title="@string/screen_settings_contact_label">
			<intent
				android:action="android.intent.action.VIEW"
				android:data="@string/screen_settings_support_uri" />
		</androidx.preference.PreferenceScreen>

		<androidx.preference.SwitchPreferenceCompat
			android:defaultValue="false"
			android:key="debugMode"
			android:title="@string/screen_settings_debug_mode_label" />

		<androidx.preference.PreferenceScreen
			android:key="sendErrorReport"
			android:title="@string/screen_settings_error_report_label" />

	</PreferenceCategory>

	<PreferenceCategory android:title="@string/screen_settings_section_social">

		<androidx.preference.PreferenceScreen android:title="@string/screen_settings_website_label">
			<intent
				android:action="android.intent.action.VIEW"
				android:data="@string/screen_settings_website_uri" />
		</androidx.preference.PreferenceScreen>

		<androidx.preference.PreferenceScreen android:title="@string/screen_settings_mastodon_label">
			<intent
				android:action="android.intent.action.VIEW"
				android:data="@string/screen_settings_mastodon_uri" />
		</androidx.preference.PreferenceScreen>

		<androidx.preference.PreferenceScreen android:title="@string/screen_settings_twitter_label">
			<intent
				android:action="android.intent.action.VIEW"
				android:data="@string/screen_settings_twitter_uri" />
		</androidx.preference.PreferenceScreen>

	</PreferenceCategory>

	<PreferenceCategory android:title="@string/screen_settings_section_legal">

		<androidx.preference.PreferenceScreen android:title="@string/screen_settings_licenses_label">
			<intent
				android:action="android.intent.action.MAIN"
				android:targetClass="de.ninafoss.presentation.ui.activity.LicensesActivity"
				android:targetPackage="@string/app_id" />
		</androidx.preference.PreferenceScreen>

	</PreferenceCategory>

	<PreferenceCategory
		android:key="versionCategory"
		android:title="@string/screen_settings_section_version">

		<androidx.preference.PreferenceScreen
			android:enabled="false"
			android:key="appVersion"
			android:title="@string/app_name" />

		<ListPreference
			android:defaultValue="7"
			android:dialogTitle="@string/dialog_settings_update_check_interval_title"
			android:entries="@array/update_interval_entries"
			android:entryValues="@array/update_interval_values"
			android:key="updateInterval"
			android:summary="%s"
			android:title="@string/dialog_settings_update_check_interval_title" />

		<androidx.preference.PreferenceScreen
			android:key="updateCheck"
			android:title="@string/screen_settings_check_updates" />

	</PreferenceCategory>

</androidx.preference.PreferenceScreen>
