<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="@dimen/activity_vertical_margin">

	<com.google.android.material.textfield.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/locationName"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:imeOptions="flagNoPersonalizedLearning"
			android:hint="@string/screen_create_location_name_label"
			android:singleLine="true" />


	</com.google.android.material.textfield.TextInputLayout>

	<Button
		android:id="@+id/createLocationButton"
		style="?android:textAppearanceSmall"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/screen_webdav_settings_done_button_text"
		android:textStyle="bold" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/createLocationButton"
		android:layout_marginStart="16dp"
		android:layout_marginTop="25dp"
		android:singleLine="true"
		android:text="@string/screen_locations_title"
		android:textColor="@color/colorPrimary"
		android:textSize="16sp" />

	<include layout="@layout/recycler_view_layout" />

</LinearLayout>

